2011-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCbtree.cc,
	  src/SDCCralloc.hpp,
	  src/SDCCsymt.h,
	  src/SDCCtree_dec.hpp,
	  src/z80/ralloc2.cc,
	  src/z80/ralloc.c,
	  src/z80/ralloc.h,
	  src/z80/gen.c:
	  Minor code cleanup.
	  
2011-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCbtree.h,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/z80/ralloc.c,
	  src/SDCCbtree.cc,
	  src/SDCCtree_dec.hpp:
	  Preparations for tree-decomposition-based spilllocation allocation.

2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/z80/ralloc2.cc:
	  Some work towards Thorup-style spilllocation allocation.
	 
2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp:
	  Allow retrieval of separators when generating tree-decompositions from elimination orderings.

2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/Makefile.in,
	  src/SDCC.y,
	  src/SDCCralloc.hpp,
	  src/SDCCbtree.h,
	  src/SDCCbtree.cc,
	  src/SDCCicode.c,
	  src/SDCCmem.c,
	  src/SDCCast.c:
	  Block-tree based stack allocator.

2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCOpt.c,
	  src/SDCCcse.c:
	  Preserve block number when replacing iCode.

2011-07-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Optimized jumptable generation.

2011-07-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCpeep.c:
	  labelJTInRange() fix, to ensure that jp by jr replacement is correct in jumptables.
