@@ -41,7 +41,6 @@ void btree_add_child(short parent, short child)
   boost::add_edge(parent, child, btree);
 }
 
-#if 0
 short btree_lowest_common_ancestor(short a, short b)
 {
   if(a == b)
@@ -53,7 +52,6 @@ short btree_lowest_common_ancestor(short a, short b)
 		
   return(btree_lowest_common_ancestor(a, b));
 }
-#endif
 
 void btree_add_symbol(struct symbol *s)
 {
